--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yash's Terminal Portfolio</title>
-  <link rel="stylesheet" href="/portfolio/style.css">
+  <link rel="stylesheet" href="portfolio/style.css">
   <link rel="icon" href="assets/favicon.png">
 </head>
 <body>
@@ -18,6 +18,6 @@
       <span>&gt; </span><input type="text" placeholder="Type 'help' to see a list of available commands." id="command-input" autofocus>
     </div>
   </div>
-  <script src="/portfolio/script.js"></script>
+  <script src="portfolio/script.js"></script>
 </body>
 </html>
